part-1/exercise-1.11/manifests/log-output-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwk-log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-log-output
  template:
    metadata:
      labels:
        app: dwk-log-output
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: dwk-log-output-writer
          image: dwk-log-output-writer:1.11.0
          imagePullPolicy: Never
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
        - name: dwk-log-output-reader
          image: dwk-log-output-reader:1.11.0
          imagePullPolicy: Never
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
