part-1/exercise-1.11/manifests/ping-pong-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dwk-ping-pong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dwk-ping-pong
  template:
    metadata:
      labels:
        app: dwk-ping-pong
    spec:
      volumes:
        - name: shared-image
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: dwk-ping-pong
          image: dwk-ping-pong:1.11.0
          imagePullPolicy: Never
          volumeMounts:
          - name: shared-image
            mountPath: /usr/src/app/files
