part-1/exercise-1.11/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-log-output-ing
spec:
  rules:
  - http:
      paths:
      - path: /now/writer
        pathType: Prefix
        backend:
          service:
            name: dwk-log-output-svc
            port:
              number: 7777
      - path: /now/reader
        pathType: Prefix
        backend:
          service:
            name: dwk-log-output-svc
            port:
              number: 7778
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: dwk-ping-pong-svc
            port:
              number: 2345
